# openpaws

./: .env.example  .gitignore  CODEBASE.md  CONTRIBUTING.md  LICENSE  Makefile  PLATFORM_SETUP_GUIDE.docx  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.ts
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: Dockerfile  Dockerfile.worker  main.py  pyproject.toml
backend/app/: config.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  users.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py  middleware.py  permissions.py  security.py  supabase.py
backend/app/db/: client.py  models.py
backend/app/db/repositories/: analytics_repo.py  base.py  campaign_repo.py  post_repo.py  social_account_repo.py
backend/app/schemas/: agent.py  analytics.py  auth.py  calendar.py  campaign.py  organization.py  post.py  social_account.py
backend/tests/: conftest.py  factories.py
backend/tests/integration/: test_agent_routes.py  test_auth_routes.py  test_post_routes.py
backend/tests/unit/: test_permissions.py  test_post_service.py
backend/tests/unit/agents/: test_content_pipeline.py  test_planner_node.py  test_reviewer_node.py
frontend/: package-lock.json  package.json  tailwind.config.ts
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: auth-provider.tsx
src/lib/: constants.ts  supabase-middleware.ts  supabase-server.ts  supabase.ts
src/stores/: app-store.ts  content-store.ts  schedule-store.ts  social-accounts-store.ts  (+1 more)
supabase/: config.toml
(+75 files in other folders)
