[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openpaws"
version = "0.1.0"
description = "OpenPaws - AI-powered social media management platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "pydantic-settings",
    "supabase",
    "httpx",
    "structlog",
    "celery[redis]",
    "redis",
    "langchain-core",
    "langgraph",
    "langchain-openai",
    "langchain-anthropic",
    "langgraph-checkpoint-postgres",
    "python-multipart",
    "Pillow",
    "boto3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "httpx",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
